--- a/package.json
+++ b/package.json
@@ -20,9 +20,21 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.0",
+    "@as-integrations/fastify": "^2.1.1",
+    "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-fastify": "^11.1.0",
+    "@prisma/client": "^6.7.0",
+    "class-transformer": "^0.5.1",
+    "dependency-graph": "^1.0.0",
+    "graphql": "^16.11.0",
+    "graphql-type-json": "^0.3.2",
+    "prisma-graphql-type-decimal": "^3.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -44,6 +56,9 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
+    "prettier-plugin-prisma": "^5.0.0",
+    "prisma": "^6.7.0",
+    "prisma-nestjs-graphql": "^21.1.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
