--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-fastify": "^11.1.0",
     "@prisma/client": "^6.7.0",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dependency-graph": "^1.0.0",
     "graphql": "^16.11.0",
     "graphql-type-json": "^0.3.2",
