--- a/package.json
+++ b/package.json
@@ -20,21 +20,27 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@apollo/server": "^4.12.0",
+    "@apollo/server": "^4.12.2",
     "@as-integrations/fastify": "^2.1.1",
     "@nestjs/apollo": "^13.1.0",
-    "@nestjs/common": "^11.0.1",
+    "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.0.1",
+    "@nestjs/core": "^11.1.6",
     "@nestjs/graphql": "^13.1.0",
-    "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/platform-fastify": "^11.1.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/platform-fastify": "^11.1.6",
     "@prisma/client": "^6.7.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dependency-graph": "^1.0.0",
     "graphql": "^16.11.0",
     "graphql-type-json": "^0.3.2",
+    "jwks-rsa": "^3.2.0",
+    "passport": "^0.7.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.1",
     "prisma-graphql-type-decimal": "^3.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
@@ -44,18 +50,19 @@
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.1",
-    "@swc/cli": "^0.6.0",
+    "@nestjs/testing": "^11.1.6",
+    "@swc/cli": "^0.7.8",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.7",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.5.2",
+    "@types/passport-http-bearer": "^1.0.41",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
-    "jest": "^29.7.0",
+    "jest": "^30.1.3",
     "prettier": "^3.4.2",
     "prettier-plugin-prisma": "^5.0.0",
     "prisma": "^6.8.2",
