--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-fastify": "^11.1.9",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@types/uuid": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "dependency-graph": "^1.0.0",
@@ -45,7 +46,8 @@
     "pg": "^8.16.3",
     "prisma-graphql-type-decimal": "^3.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
