--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.3",
     "dependency-graph": "^1.0.0",
     "graphql": "^16.12.0",
+    "graphql-subscriptions": "^3.0.0",
     "graphql-type-json": "^0.3.2",
     "jwks-rsa": "^3.2.0",
     "passport": "^0.7.0",
